<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <ImageView
        android:id="@+id/logo_semi_login"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_organizze"
        app:tint="@color/colorSecondary"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/title_semi_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mensagem_title_semi_login"
        android:textColor="@color/colorTextPrincipal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subTitle_semi_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sub_title_semi_login"
        android:textColor="@color/colorTextSub"
        android:textSize="18sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/colorTextPrincipal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextSub" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/colorTextPrincipal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_senha"
            android:drawablePadding="10dp"
            android:hint="Senha"
            android:inputType="textPassword"
            android:textColor="@color/colorTextSub" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_arredondada_botao"
        android:onClick="btEntrar"
        android:text="@string/entrar"
        android:textColor="@color/colorTextSub" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/semi_login_cardView"
            android:layout_width="150dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@android:color/black"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/semi_login_cardView2"
            android:layout_width="150dp"
            android:layout_height="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@android:color/black"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textConectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/texto_conectivo"
            android:textColor="@color/colorTextSub"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/semi_login_cardView"
            app:layout_constraintStart_toEndOf="@+id/semi_login_cardView2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonCadastreSe"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_arredondada_botao"
        android:onClick="btCadastrar"
        android:text="@string/cadastre_se"
        android:textColor="@color/colorTextSub" />

    <TextView
        android:id="@+id/semi_login_text_termos_uso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:onClick="btTermosDeUso"
        android:text="@string/termos_de_uso"
        android:textColor="@color/colorTextSub"
        android:textSize="16sp" />

</LinearLayout>